ready für erster Einsatz

--- a/Sprachsteuerung Test 1/Sprachsteuerung Test 1.csproj
+++ b/Sprachsteuerung Test 1/Sprachsteuerung Test 1.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>Sprachsteuerung Test 1</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <LangVersion>4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
